mongodb and rabbitmq  k8s operator

--- a/k8s/rabbitmq/rabbitmq-configmap.yml
+++ b/k8s/rabbitmq/rabbitmq-configmap.yml
@@ -3,5 +3,5 @@ kind: ConfigMap
 metadata:
   name: rabbitmq-configmap
 data:
-  RABBITMQ_HOST: "rabbitmq-cluster-ip-service"
+  RABBITMQ_HOST: "rabbitmq-cluster"
   RABBITMQ_PORT: "5672"
