--- a/k8s/atlas/project.yml
+++ b/k8s/atlas/project.yml
@@ -5,5 +5,5 @@ metadata:
 spec:
   name: "K8s Micro"
   projectIpAccessList:
-    - ipAddress: "0.0.0.0/0"
+    - ipAddress: "0.0.0.0"
       comment: "Allowing access to database from everywhere (only for development!)"
