--- a/k8s/ingress/ingress-service.yml
+++ b/k8s/ingress/ingress-service.yml
@@ -8,20 +8,19 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec:
   rules:
-    - host: <load-balancer-ip-from-nginx-aws>
-      http:
+    - http:
         paths:
           - path: /?(.*)
             pathType: Prefix
             backend:
               service:
-                name: store-cluster-ip-service
+                name: store-frontend-service
                 port:
                   number: 80
           - path: /api/?(.*)
             pathType: Prefix
             backend:
               service:
-                name: products-api-cluster-ip-service
+                name: store-backend-cluster-ip-service
                 port:
                   number: 5002
