--- a/k8s/ingress/ingress-service.yml
+++ b/k8s/ingress/ingress-service.yml
@@ -8,7 +8,8 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec:
   rules:
-    - http:
+    - host: "<aws-lb-url>"
+      http:
         paths:
           - path: /?(.*)
             pathType: Prefix
